show center fixed and home items align fixed

--- a/app/assets/stylesheets/components/_card-tool.scss
+++ b/app/assets/stylesheets/components/_card-tool.scss
@@ -1,6 +1,7 @@
 #booking-grid {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 .booking-title {
